--- a/DockerFile
+++ b/DockerFile
@@ -1,15 +1,8 @@
+# Use a base image
+FROM nginx:latest
 
-FROM node:14
+# Copy your website files to the appropriate location in the image
+COPY . /usr/share/nginx/html
 
-
-WORKDIR /app
-
-
-COPY . .
-
-RUN npm install
-
-
-EXPOSE 3000
-
-CMD [ "npm", "start" ]
+# Expose the port that the web server will listen on
+EXPOSE 80
