--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,26 @@
-name: Docker Image CI
+name: Docker Deployment
 
 on:
   push:
-    branches: ['master']
-  pull_request:
-    branches: ['master']
+    branches:
+      - main # Adjust this to your main branch name
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Login Dockerhub
-        env:
-          DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-      - name: Build the docker image
-        run: docker build -t bankist-app G:\JS-Jonas-Practice\Banklist
-      - name: Push to DockerHub
-        run: docker push reza1996/bankist-app:latest
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t bankist-app .
+          docker tag bankist-app:latest reza1996/bankist-app:latest
+          docker push reza1996/bankist-app:latest
