--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,11 @@
-# Use a base image
-FROM nginx:latest
+# Use a lightweight web server as the base image
+FROM nginx:alpine
 
-# Copy your website files to the appropriate location in the image
+# Copy the website files into the web server's document root
 COPY . /usr/share/nginx/html
 
-# Expose the port that the web server will listen on
+# Expose port 80 for web traffic
 EXPOSE 80
+
+# Start the web server
+CMD ["nginx", "-g", "daemon off;"]
