--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Push to Docker Hub
+name: Build and Deploy
 
 on:
   push:
@@ -6,21 +6,18 @@ on:
       - master
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Build Docker image
+        run: docker build -t bankist-app:${{ github.sha }} .
 
-      - name: Build and push Docker image
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKERHUB_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          docker buildx create --use
-          docker buildx inspect default --bootstrap
-          docker buildx build --platform linux/amd64,linux/arm64 -t $DOCKERHUB_USERNAME/reza1996:${{ github.sha }} . --push
+      - name: Login to Docker Hub (if using)
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker image (if using)
+        run: docker push bankist-app:${{ github.sha }}
